-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.1.0
-
OS X 10.11
Qt Creator always re-configures a cmake project when opening it, always writes build files to different folders:
– Build files have been written to: /private/var/folders/_2/5lk_xmf15y5f3682wk4dnjw00000gn/T/qtc-cmake-SXBaPl
when opening the same project next time:
– Build files have been written to: /private/var/folders/_2/5lk_xmf15y5f3682wk4dnjw00000gn/T/qtc-cmake-UKDKso
This makes Qt Creator unusable for large cmake projects ( e.g. with 1000s of source files).
The only way to fix this is to manually create build folders for the project.
The latest version without this issue is Qt Creator 3.6.1, all 4.x builds are affected.
For Gerrit Dashboard: QTCREATORBUG-16794 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
204821,3 | CMake: Add option to auto-create build directories | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |